--- a/src/style/Gallery.css
+++ b/src/style/Gallery.css
@@ -3,16 +3,27 @@
 	flex-wrap: wrap;
 	justify-content: center;
 }
-
 .gallery__img--container {
-	width: 9rem;
+	/* width: 9rem; */
 	height: 9rem;
-	background-color: lightgray;
-	border: solid;
+	margin: 0.5rem;
+	/* border: solid; */
 }
-@media (min-width: 769px) {
+.gallery__img--container img {
+	height: 100%;
+}
+@media (min-width: 600px) {
 	.gallery__img--container {
-		width: 15rem;
-		height: 15rem;
+		height: 13rem;
+	}
+}
+@media (min-width: 750px) {
+	.gallery__img--container {
+		height: 16rem;
+	}
+}
+@media (min-width: 900px) {
+	.gallery__img--container {
+		height: 19rem;
 	}
 }
