--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -1,10 +1,24 @@
-header {
-	/* position: fixed; */
-	background-color: lightgray;
+.header__section {
+	position: relative;
+	/* height: 100vh; */
 }
+header {
+	/* position: absolute;
+	top: 100%; */
+	width: 100%;
+}
+.header__section img {
+	width: 100%;
+}
+
 @media (min-width: 426px) {
 	header {
-		padding: 2rem 0;
+		position: absolute;
+		top: 0;
+		padding: 1rem 0;
+	}
+	header nav a {
+		color: #fff;
 	}
 	header ul {
 		display: flex;
