--- a/src/style/Steps.css
+++ b/src/style/Steps.css
@@ -1,116 +1,50 @@
-.steps .frise {
-	position: relative;
-	border: solid 1px;
-	align-self: center;
-}
 .frise__container {
-	display: flex;
-	justify-content: center;
+	display: none;
 }
-.frise {
-	width: 14vw;
-}
-.frise__arrow {
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	height: 0;
-	width: 0;
-	border-top: 10px solid transparent;
-	border-bottom: 10px solid transparent;
-	border-left: 10px solid black;
-	right: -0.7rem;
-	z-index: 500;
-}
-.arrow__inner {
-	border-left: 10px solid white;
-	right: 0.1rem;
-	top: 0.01rem;
-}
-.frise__text {
-	height: 6rem;
-	/* margin: 1rem;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%); */
-}
-.frise__text p {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-/*version 2*/
-.mainline {
-	border-top: solid 2px;
-	position: relative;
-	width: 80%;
-	margin: 10% auto;
-}
-.two {
-	left: 100px;
-}
-.two .text p {
-	transform: translateY(-20px);
-}
-.three {
-	left: 200px;
-}
-.circle {
-	text-align: center;
-	/*position: absolute;*/
-	position: relative;
-	top: -50px;
-	transform: translateX(-50%);
-	width: 50px;
-	height: 50px;
-	background: lightgray;
-	border-radius: 50%;
-	z-index: 100;
-}
-.vertline__container:nth-child(2n) .circle {
-	top: 2.5rem;
-}
-.vertline__container:nth-child(2n) .text {
-	top: -80px;
-}
-.vertline__container {
-	position: absolute;
-}
-.one {
-	left: 0;
-}
-.two {
-	left: 25%;
-}
-.three {
-	left: 50%;
-}
-.four {
-	left: 75%;
-}
-.five {
-	left: 100%;
-}
-.circle {
-	top: -5.5rem;
-}
-.circle p {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	font-size: 1.5rem;
-}
-.line {
-	position: absolute;
-	top: -40px;
-	border-left: solid black 3px;
-	height: 80px;
-}
-.text {
-	position: absolute;
-	top: 50px;
-	transform: translateX(-50%);
+
+@media (min-width: 425px) {
+	.steps .frise {
+		position: relative;
+		border: solid 1px;
+		align-self: center;
+	}
+	.frise__container {
+		display: flex;
+		justify-content: center;
+		margin: 1rem auto;
+	}
+	.frise {
+		width: 14vw;
+	}
+	.frise__arrow {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		height: 0;
+		width: 0;
+		border-top: 10px solid transparent;
+		border-bottom: 10px solid transparent;
+		border-left: 10px solid black;
+		right: -0.7rem;
+		z-index: 500;
+	}
+	.arrow__inner {
+		border-left: 10px solid white;
+		right: 0.1rem;
+		top: 0.01rem;
+	}
+	.frise__text {
+		height: 6rem;
+		/* margin: 1rem;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%); */
+	}
+	.frise__text p {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
 }
