--- a/src/style/Appointment.css
+++ b/src/style/Appointment.css
@@ -1,9 +1,8 @@
 #appointment {
 	margin: 1rem auto;
-	background-image: url("../images/time.jpg");
+	background-image: url("../images/time_vertical.jpg");
 	background-size: cover;
 	color: white;
-	font-size: 1.5rem;
 }
 .appointment--opacity {
 	background-color: rgba(51, 51, 51, 0.6);
@@ -15,6 +14,10 @@
 	margin: 2rem auto;
 }
 @media (min-width: 768px) {
+	#appointment {
+		background-image: url("../images/time.jpg");
+		font-size: 1.5rem;
+	}
 	.time__details,
 	.price__details {
 		display: flex;
