--- a/src/style/Steps.css
+++ b/src/style/Steps.css
@@ -1,7 +1,17 @@
 .frise__container {
 	display: none;
 }
-
+.single__step {
+	margin: 1rem auto;
+}
+@media (max-width: 767px) {
+	.steps {
+		margin: 1rem;
+	}
+	.single__step {
+		margin: 1rem auto;
+	}
+}
 @media (min-width: 425px) {
 	.steps .frise {
 		position: relative;
@@ -35,11 +45,6 @@
 	}
 	.frise__text {
 		height: 6rem;
-		/* margin: 1rem;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%); */
 	}
 	.frise__text p {
 		position: absolute;
