--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,22 @@
 	text-align: center;
 }
 h1 {
+	font-size: 3rem;
 	margin: 2rem auto;
 }
 h2 {
-	font-size: 1.5rem;
+	font-size: 2.5rem;
 	margin: 2rem auto;
 }
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
 	p,
 	li {
 		font-size: 1.2rem;
+	}
+}
+@media (min-width: 1200px) {
+	p,
+	li {
+		font-size: 1.3rem;
 	}
 }
