--- a/src/style/Appointment.css
+++ b/src/style/Appointment.css
@@ -8,10 +8,17 @@
 	background-color: rgba(51, 51, 51, 0.6);
 	padding: 2rem 0;
 }
+.appointment__location iframe {
+	width: 90vw;
+	height: 300px;
+}
 .appointment__time,
 .appointment__price,
 .price__details {
 	margin: 2rem auto;
+}
+.appointment__price p {
+	margin: 1rem 2rem;
 }
 @media (min-width: 768px) {
 	#appointment {
@@ -22,5 +29,14 @@
 	.price__details {
 		display: flex;
 		justify-content: space-around;
+	}
+	.time__details p {
+		line-height: 5rem;
+	}
+}
+@media (min-width: 768px) {
+	.appointment__location iframe {
+		width: 60vw;
+		height: 400px;
 	}
 }
