care component added + removed margin

--- a/src/style/Appointment.css
+++ b/src/style/Appointment.css
@@ -1,5 +1,5 @@
 #appointment {
-	margin: 1rem auto;
+	/* margin: 1rem auto; */
 	background-image: url("../images/time_vertical.jpg");
 	background-size: cover;
 	color: white;
