--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,22 @@ h1 {
 	margin: 2rem auto;
 }
 h2 {
-	font-size: 2.5rem;
-	margin: 2rem auto;
+	font-size: 2rem;
+	/* margin: 2rem auto; */
+}
+.section__separate {
+	height: 5rem;
+	/* border: solid; */
+	background-color: black;
 }
 @media (min-width: 1024px) {
 	p,
 	li {
 		font-size: 1.2rem;
+	}
+	h2 {
+		font-size: 2.5rem;
+		/* margin: 2rem auto; */
 	}
 }
 @media (min-width: 1200px) {
