--- a/src/style/Gallery.css
+++ b/src/style/Gallery.css
@@ -5,7 +5,7 @@
 }
 .gallery__img--container {
 	width: 8rem;
-	margin: 0.5rem;
+	/* margin: 0.5rem; */
 }
 .gallery__img--container img {
 	width: 100%;
@@ -21,9 +21,9 @@
 	}
 }
 @media (min-width: 768px) {
-	#gallery {
+	/* #gallery {
 		margin: 8rem 0;
-	}
+	} */
 	.gallery__img--container {
 		width: 15rem;
 	}
@@ -34,17 +34,15 @@
 	}
 }
 @media (min-width: 1200px) {
-	.gallery__container {
-		/* width: 80vw; */
+	/* .gallery__container {
 		margin: 1rem auto;
-	}
+	} */
 	.gallery__img--container {
 		width: 23rem;
 	}
 }
-@media (min-width: 1500px) {
+/* @media (min-width: 1500px) {
 	.gallery__container {
-		/* width: 80vw; */
 		margin: 1rem auto;
 	}
-}
+} */
