--- a/src/style/Appointment.css
+++ b/src/style/Appointment.css
@@ -6,20 +6,20 @@
 }
 .appointment--opacity {
 	background-color: rgba(51, 51, 51, 0.6);
-	padding: 2rem 0;
+	/* padding: 2rem 0; */
 }
 .appointment__location iframe {
 	width: 90vw;
 	height: 300px;
 }
-.appointment__time,
+/* .appointment__time,
 .appointment__price,
 .price__details {
 	margin: 2rem auto;
-}
-.appointment__price p {
+} */
+/* .appointment__price p {
 	margin: 1rem 2rem;
-}
+} */
 @media (min-width: 768px) {
 	#appointment {
 		background-image: url("../images/time.jpg");
