--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,22 @@ h2 {
 	font-size: 2rem;
 	/* margin: 2rem auto; */
 }
-.section__separate {
-	height: 5rem;
-	/* border: solid; */
-	background-color: black;
+p,
+li {
+	font-size: 1.1rem;
+}
+
+@media (min-width: 768px) {
+	.section__separate {
+		height: 5rem;
+		/* width: 100vw; */
+		background-color: transparent;
+	}
 }
 @media (min-width: 1024px) {
 	p,
 	li {
-		font-size: 1.2rem;
+		font-size: 1.5rem;
 	}
 	h2 {
 		font-size: 2.5rem;
@@ -27,6 +34,6 @@ h2 {
 @media (min-width: 1200px) {
 	p,
 	li {
-		font-size: 1.3rem;
+		font-size: 1.5rem;
 	}
 }
