--- a/src/style/Gallery.css
+++ b/src/style/Gallery.css
@@ -1,14 +1,14 @@
-#gallery {
+/* #gallery {
 	height: 200vh;
 	position: relative;
-}
+} */
 .gallery__container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	position: absolute;
+	/* position: absolute;
 	top: 50%;
-	transform: translateY(-50%);
+	transform: translateY(-50%); */
 }
 .gallery__img--container {
 	width: 9rem;
@@ -37,7 +37,7 @@
 }
 @media (min-width: 900px) {
 	.gallery__img--container {
-		width: 18rem;
+		width: 19rem;
 	}
 }
 @media (min-width: 1200px) {
@@ -45,7 +45,7 @@
 		margin: 1rem auto;
 	} */
 	.gallery__img--container {
-		width: 20rem;
+		width: 22.5rem;
 	}
 }
 @media (min-width: 1440px) {
