--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Philosopher:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Philosopher:wght@400;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Philosopher&display=swap"); */
 /* font-family: 'Philosopher', sans-serif; */
 .App {
 	text-align: center;
