--- a/src/App.css
+++ b/src/App.css
@@ -5,44 +5,51 @@
 	text-align: center;
 }
 h1 {
-	font-size: 3rem;
+	font-size: 2.5rem;
 	margin: 2rem auto;
 	font-family: "Philosopher", sans-serif;
 }
 h2 {
-	font-size: 2rem;
+	font-size: 1.5rem;
 	font-family: "Philosopher", sans-serif;
-	/* margin: 2rem auto; */
 }
 p,
 li {
-	font-size: 1rem;
+	font-size: 0.9rem;
 }
-.about__title {
+/* .about__title {
 	font-family: "Philosopher", sans-serif;
 	font-size: 1.5rem;
-}
+} */
 
 @media (min-width: 768px) {
 	.section__separate {
 		height: 5rem;
-		/* width: 100vw; */
 		background-color: transparent;
 	}
-}
-@media (min-width: 1024px) {
-	/* p,
-	li {
-		font-size: 1.5rem;
-	} */
 	h2 {
-		font-size: 2.5rem;
-		/* margin: 2rem auto; */
+		margin-bottom: 2rem;
+	}
+}
+
+@media (min-width: 1024px) {
+	p,
+	li {
+		font-size: 1rem;
+	}
+	h2 {
+		font-size: 2rem;
 	}
 }
 @media (min-width: 1200px) {
-	/* p,
+	p,
 	li {
-		font-size: 1.5rem;
-	} */
+		font-size: 1.1rem;
+	}
+}
+@media (min-width: 1440px) {
+	p,
+	li {
+		font-size: 1.2rem;
+	}
 }
