--- a/src/style/ContactForm.css
+++ b/src/style/ContactForm.css
@@ -5,12 +5,6 @@
 	height: 100vh;
 	position: relative;
 }
-form {
-	/* position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	width: 100%; */
-}
 input,
 textarea {
 	width: 100%;
@@ -81,5 +75,11 @@ form #send {
 		width: 100%;
 		height: 20rem;
 		border: none;
+	}
+	.contact__location {
+		margin-left: 1rem;
+	}
+	form {
+		margin-right: 1rem;
 	}
 }
