--- a/src/style/Appointment.css
+++ b/src/style/Appointment.css
@@ -4,22 +4,26 @@
 	background-size: cover;
 	color: white;
 }
+#appointment p {
+	margin: 0.5rem 0;
+}
 .appointment__time,
-.appointment__location,
+/* .appointment__location, */
 .appointment__price {
-	height: 100vh;
+	/* height: 100vh; */
 	position: relative;
+	margin: 2rem;
 }
 .appointment--opacity {
 	background-color: rgba(51, 51, 51, 0.6);
 	/* padding: 2rem 0; */
 }
-.appointment__position {
+/* .appointment__position {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
 	width: 100%;
-}
+} */
 .appointment__location iframe {
 	width: 90vw;
 	height: 300px;
