--- a/src/style/Steps.css
+++ b/src/style/Steps.css
@@ -1,5 +1,13 @@
+.steps {
+	margin: 0 2rem;
+}
+.frise__container {
+	width: 60vw;
+	margin: 1rem auto;
+}
+
 .step__bloc {
-	height: 100vh;
+	/* height: 100vh; */
 	position: relative;
 }
 /* .frise__container {
@@ -8,12 +16,12 @@
 /* .steps__container {
 	margin: 1rem;
 } */
-.frise__container {
+/* .frise__container {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-}
+} */
 .steps li {
 	margin: 1rem 0;
 }
@@ -27,11 +35,11 @@
 .steps__cancel {
 	color: #a30500;
 }
-.step__bloc--position {
+/* .step__bloc--position {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
-}
+} */
 /* @media (max-width: 649px) {
 	#step__bloc--smallscreen {
 		height: initial;
@@ -51,9 +59,9 @@
 	position: relative;
 	border: solid 1px;
 }
-.frise {
+/* .frise {
 	width: 50vw;
-}
+} */
 .frise:nth-child(1) {
 	border-top-left-radius: 1rem;
 	border-top-right-radius: 1rem;
